Changed hyperion dependency. Changed find by number

--- a/extension.config.json
+++ b/extension.config.json
@@ -28,7 +28,7 @@
                         "selection": "single",
                         "type": "url",
                         "method": "GET",
-                        "path": "/server/whr/2/items",
+                        "path": "/whr/{operation-guid}/items",
                         "pathType": "cs-relative"
                     }
                 ]
