--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "commander": "^2.17.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "ftp": "^0.3.10"
   },
   "devDependencies": {}
 }
