--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.18.3",
     "commander": "^2.17.1",
     "express": "^4.16.3",
-    "ftp": "^0.3.10"
+    "ftp": "^0.3.10",
+    "multer": "^1.4.1"
   },
   "devDependencies": {}
 }
