--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Magaya",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@magaya/extension-fs-helper": "0.0.3",
-    "body-parser": "^1.18.3",
-    "commander": "^2.17.1",
-    "express": "^4.16.3",
+    "body-parser": "^1.19.0",
+    "commander": "^2.20.3",
+    "express": "^4.17.1",
     "ftp": "^0.3.10",
-    "multer": "^1.4.1"
+    "multer": "^1.4.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "minimist": ">=1.2.2"
+  }
 }
