--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "author": "Magaya",
   "license": "MIT",
   "dependencies": {
-    "@magaya/extension-fs-helper": "0.0.3",
-    "body-parser": "^1.19.0",
-    "commander": "^2.20.3",
+    "@magaya/extension-fs-helper": "0.1.0",
+    "commander": "^7.2.0",
     "express": "^4.17.1",
     "ftp": "^0.3.10",
+    "moment": "^2.29.1",
     "multer": "^1.4.2"
   },
   "devDependencies": {
-    "minimist": ">=1.2.2"
+    "minimist": ">=1.2.5"
   }
 }
