--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "license": "MIT",
   "dependencies": {
     "@magaya/extension-fs-helper": "0.1.0",
-    "commander": "^7.2.0",
-    "express": "^4.17.1",
+    "commander": "^8.3.0",
+    "express": "^4.18.2",
     "ftp": "^0.3.10",
-    "moment": "^2.29.2",
-    "multer": "^1.4.2"
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "minimist": ">=1.2.6"
+    "minimist": ">=1.2.7"
   }
 }
